Fix arrow btn group stretching

--- a/src/components/ui/arrowbutton/ArrowBtnGroup.scss
+++ b/src/components/ui/arrowbutton/ArrowBtnGroup.scss
@@ -1,5 +1,7 @@
 .arrow-btn-group {
   display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
   .arrow-button:not(:first-child) {
     margin-left: -20px;
 
